--- a/AirQuality/app/src/main/res/values/colors.xml
+++ b/AirQuality/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- 직접 추가한 색 -->
+    <color name="orange">#FF6E40</color>
+    <color name="orange_transparent">#C3FF6E40</color>
 </resources>
